feat: endpoint jobs offers done
